backend: Добавлен файл application.properties для указания порта сервера
frontend:
Изменена структура каталогов для хранения компонент
Удален класс StaticDataSource, повсеместно включено использование RestDataSource
Использование HttpClient взамен устаревшего Http
Для файловых систем добавлена колонка "Avail"

--- a/frontend/src/app/client/filesystems/filesystems.component.html
+++ b/frontend/src/app/client/filesystems/filesystems.component.html
@@ -12,13 +12,15 @@
           <th>#</th>
           <th>Mount On</th>
           <th class="text-sm-center">Used, %</th>
+          <th class="text-sm-center">Avail</th>
         </thead>
         <tbody>
-        <tr *ngFor="let item of fileSystems; let i = index">
-          <td><b>{{ i + 1 }}</b></td>
-          <td>{{ item.mountOn }}</td>
-          <td class="text-sm-center">{{ item.percentUsed }}</td>
-        </tr>
+          <tr *ngFor="let item of fileSystems; let i = index">
+            <td><b>{{ i + 1 }}</b></td>
+            <td>{{ item.mountOn }}</td>
+            <td class="text-sm-center">{{ item.percentUsed }}</td>
+            <td class="text-sm-center">{{ item.availHuman }}</td>
+          </tr>
         </tbody>
       </table>
     </div>
