--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,18 +2,20 @@
   <h5 class="bg-success p-a-1">{{ title }}</h5>
 </div>
 
-<div class="row p-a-1">
-  <div class="col-sm-6">
-    <filesystems-root></filesystems-root>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <cpu-root></cpu-root>
+    </div>
   </div>
 
-  <div class="col-sm-6">
-    <sensors-root></sensors-root>
+  <div class="row p-a-1">
+    <div class="col-sm-6">
+      <filesystems-root></filesystems-root>
+    </div>
+
+    <div class="col-sm-6">
+      <sensors-root></sensors-root>
+    </div>
   </div>
 </div>
-
-<!--<div class="col-sm-12">-->
-  <!--<os-root></os-root>-->
-<!--</div>-->
-
-
