Added pages for viewing data

--- a/frontend/src/app/components/os/os-detail.component.html
+++ b/frontend/src/app/components/os/os-detail.component.html
@@ -5,9 +5,9 @@
   </div>
   <div class="card-body">
     <div class="m-a-1">
-      <!--<p><b>Type</b>: {{os.toString()}}</p>-->
-      <!--<p><b>Arch</b>: {{os.arch}}</p>-->
-      <!--<p><b>Version</b>: {{os.version}}</p>-->
+      <p>Type: {{ os.type }}</p>
+      <p>Arch: {{ os.arch }}</p>
+      <p>Version: {{ os.version }}</p>
     </div>
   </div>
 </div>
