--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,21 +1,21 @@
-<div style="text-align:center">
-  <h5 class="bg-success p-a-1">{{ title }}</h5>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <cpu-root></cpu-root>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerLink="/">Telemetry</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/cpu">CPU</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/sensors">Sensors</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/filesystems">File systems</a>
+      </li>
+    </ul>
   </div>
+</nav>
 
-  <div class="row p-a-1">
-    <div class="col-sm-6">
-      <filesystems-root></filesystems-root>
-    </div>
-
-    <div class="col-sm-6">
-      <sensors-root></sensors-root>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
