--- a/frontend/src/app/components/cpu/cpu-usage.component.html
+++ b/frontend/src/app/components/cpu/cpu-usage.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-sm-1">
-    <span class="align-middle">CPU</span>
+    <span class="align-middle">Usage</span>
   </div>
   <div class="col-sm-11">
     <div class="progress">
